Terraform-Scripts/04-Ec2-Part2/main.tf
provider "aws"{
    region = "us-east-1"


}
resource "aws_security_group" "webtraffic" {
    name = "Hello https"
## inbound rule
    ingress {
        from_port = 80
        to_port =80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
        ingress {
        from_port = 22
        to_port =22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

## outbound rule
    egress {
        from_port = 80
        to_port =80
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
resource "aws_instance" "myinstance" {
    ami = ""
    instance_type = "t3.micro"
    vpc_security_group_ids = [aws_security_group.webtraffic.id]
}
